--- a/src/styles/base/_config.scss
+++ b/src/styles/base/_config.scss
@@ -85,7 +85,7 @@ $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-xxl: 1440px;
 
-$container-width: 1260px;
+$container-width: 1120px;
 
 $shadow-bottom: 0 1px 3px rgba(0, 0, 0, 0.2);
 $shadow-middle: 0 3px 6px rgba(0, 0, 0, 0.2);
